crates/au-cli/tests/it/snapshots/it__scenarios__non-empty-list-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 26,
                        "line_col": {
                          "end": {
                            "col": 27,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/non-empty-list-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "non-empty-list-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "non-empty-list-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/non-empty-list-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 66,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 9
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 49
            },
            "text": "Non-empty tags"
          },
          {
            "content": "tags: String[+]",
            "kind": "inline_code",
            "span": {
              "end": 84,
              "line_col": {
                "end": {
                  "col": 18,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 67
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "tags",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/non-empty-list-clean/type/note.type.yaml",
                "required": true,
                "shape": "String[+]"
              }
            ],
            "required": true,
            "shape": "String[+]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 30,
                        "line_col": {
                          "end": {
                            "col": 10,
                            "line": 4
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 25
                      },
                      "file": "<root>/scenarios/non-empty-list-clean/with-tags.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "draft"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "draft"
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 43,
                        "line_col": {
                          "end": {
                            "col": 13,
                            "line": 5
                          },
                          "start": {
                            "col": 5,
                            "line": 5
                          }
                        },
                        "start": 35
                      },
                      "file": "<root>/scenarios/non-empty-list-clean/with-tags.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "reviewed"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "reviewed"
                }
              }
            ],
            "field": "tags"
          }
        ],
        "file": "<root>/scenarios/non-empty-list-clean/with-tags.md",
        "section_presence": null
      }
    ]
  }
}
