crates/au-cli/tests/it/snapshots/it__scenarios__non-empty-list-empty.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "field-shape-mismatch",
      "message": "field 'tags' value has 0 element(s) — declared shape String[+] requires at least 1",
      "related": [
        {
          "file": "<root>/scenarios/non-empty-list-empty/type/note.type.yaml",
          "line_col": {
            "end": {
              "col": 18,
              "line": 2
            },
            "start": {
              "col": 9,
              "line": 2
            }
          },
          "range": {
            "end": 25,
            "start": 16
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/non-empty-list-empty/empty-tags.md",
        "line_col": {
          "end": {
            "col": 8,
            "line": 3
          },
          "start": {
            "col": 7,
            "line": 3
          }
        },
        "range": {
          "end": 22,
          "start": 21
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 26,
                        "line_col": {
                          "end": {
                            "col": 27,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/non-empty-list-empty/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "non-empty-list-empty"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "non-empty-list-empty"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/non-empty-list-empty/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 42,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 29
            },
            "text": "Empty tags"
          },
          {
            "content": "tags: String[+]",
            "kind": "inline_code",
            "span": {
              "end": 60,
              "line_col": {
                "end": {
                  "col": 18,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 8
                }
              },
              "start": 43
            }
          },
          {
            "content": "tags: []",
            "kind": "inline_code",
            "span": {
              "end": 101,
              "line_col": {
                "end": {
                  "col": 59,
                  "line": 8
                },
                "start": {
                  "col": 49,
                  "line": 8
                }
              },
              "start": 91
            }
          },
          {
            "content": "field-shape-mismatch",
            "kind": "inline_code",
            "span": {
              "end": 162,
              "line_col": {
                "end": {
                  "col": 49,
                  "line": 9
                },
                "start": {
                  "col": 27,
                  "line": 9
                }
              },
              "start": 140
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "tags",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/non-empty-list-empty/type/note.type.yaml",
                "required": true,
                "shape": "String[+]"
              }
            ],
            "required": true,
            "shape": "String[+]"
          }
        ],
        "effective_values": [
          {
            "containers": [],
            "field": "tags"
          }
        ],
        "file": "<root>/scenarios/non-empty-list-empty/empty-tags.md",
        "section_presence": null
      }
    ]
  }
}
